--- a/Upcoming/Upcoming/Views/MainPage.xaml
+++ b/Upcoming/Upcoming/Views/MainPage.xaml
@@ -23,8 +23,8 @@
             </Grid.ColumnDefinitions>
 
             <Label Text="Upcoming" TextColor="#78f59b" FontFamily="Shrikhand-Regular" FontSize="Large" Margin="5,0,0,0" VerticalOptions="Center" HorizontalOptions="Start" Grid.Column="0"/>
-            <ImageButton Source="search" BorderColor="#78f59b" Scale=".5"  VerticalOptions="Center" Grid.Column="1"/>
-            <ImageButton Source="ham" Scale=".5" VerticalOptions="Center" Grid.Column="2"/>
+            <ImageButton Source="search" BorderColor="#78f59b" Scale=".5"  VerticalOptions="Center" Grid.Column="1" Clicked="Search_Clicked"/>
+            <ImageButton Source="ham" Scale=".5" VerticalOptions="Center" Grid.Column="2" Clicked="Menu_Clicked"/>
 
         </Grid>
 
